# aiohttp-storage

./: pyproject.toml
src/aiohttp_storage/: __init__.py  storage.py
tests/: test_storage.py
